fix: offline icon align

--- a/css/main.css
+++ b/css/main.css
@@ -307,3 +307,15 @@ nav h1 a {
 #toast.show {
   visibility: visible;
 }
+
+/* offline icon */
+
+#offline {
+  color: white;
+  padding: 0 0 0 15px;
+  display: none;
+}
+
+#offline.show {
+  display: initial;
+}
